force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/Forrester_SHIR_ROYALTY_TERM_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_ROYALTY_TERM_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_ROYALTY_TERM_VIEW</externalName>
    <label>Royalty Term</label>
    <pluralLabel>Royalty Terms</pluralLabel>
</CustomObject>