force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/ACTION_CODE__c.field-meta.xml
<CustomField>
    <fullName>ACTION_CODE__c</fullName>
    <description>ACTION_CODE</description>
    <externalDeveloperName>ACTION_CODE</externalDeveloperName>
    <label>Action Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>