force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/ACTION_DESC__c.field-meta.xml
<CustomField>
    <fullName>ACTION_DESC__c</fullName>
    <description>ACTION_DESC</description>
    <externalDeveloperName>ACTION_DESC</externalDeveloperName>
    <label>Action Code Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>