force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RECID__c</fullName>
    <description>AGREEMENT_RECID</description>
    <externalDeveloperName>AGREEMENT_RECID</externalDeveloperName>
    <label>Agreement</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_AGREEMENT_VIEW__x</referenceTo>
    <relationshipLabel>Royalty Terms</relationshipLabel>
    <relationshipName>Forrester_ROYALTY_TERM_VIEW</relationshipName>
    <type>ExternalLookup</type>
</CustomField>