force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT__c</fullName>
    <description>AMOUNT</description>
    <externalDeveloperName>AMOUNT</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>