force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/DISTRIBUTION_CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>DISTRIBUTION_CASE_RECID__c</fullName>
    <description>DISTRIBUTION_CASE_RECID</description>
    <externalDeveloperName>DISTRIBUTION_CASE_RECID</externalDeveloperName>
    <label>Distribution Case Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>