force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/FREQUENCY__c.field-meta.xml
<CustomField>
    <fullName>FREQUENCY__c</fullName>
    <description>FREQUENCY</description>
    <externalDeveloperName>FREQUENCY</externalDeveloperName>
    <label>Frequency Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>