force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/FREQUENCY_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>FREQUENCY_DESCRIPTION__c</fullName>
    <description>FREQUENCY_DESCRIPTION</description>
    <externalDeveloperName>FREQUENCY_DESCRIPTION</externalDeveloperName>
    <label>Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>