force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/MINIMUM_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>MINIMUM_AMOUNT__c</fullName>
    <description>MINIMUM_AMOUNT</description>
    <externalDeveloperName>MINIMUM_AMOUNT</externalDeveloperName>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>