force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/PATENT_ISSUE_CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>PATENT_ISSUE_CASE_RECID__c</fullName>
    <description>PATENT_ISSUE_CASE_RECID</description>
    <externalDeveloperName>PATENT_ISSUE_CASE_RECID</externalDeveloperName>
    <label>Patent Issue Case Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>