force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/PATENT_ISSUE_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>PATENT_ISSUE_COUNTRY__c</fullName>
    <description>PATENT_ISSUE_COUNTRY</description>
    <externalDeveloperName>PATENT_ISSUE_COUNTRY</externalDeveloperName>
    <label>Patent Issue Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>