force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/PATENT_ISSUED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PATENT_ISSUED_FLAG__c</fullName>
    <description>PATENT_ISSUED_FLAG</description>
    <externalDeveloperName>PATENT_ISSUED_FLAG</externalDeveloperName>
    <label>Patent Issued Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>