force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/ROYALTY_TERM_RECID__c.field-meta.xml
<CustomField>
    <fullName>ROYALTY_TERM_RECID__c</fullName>
    <description>ROYALTY_TERM_RECID</description>
    <externalDeveloperName>ROYALTY_TERM_RECID</externalDeveloperName>
    <label>Royalty Term Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>