force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/RUNNING_ROYALTIES_CREDITABLE__c.field-meta.xml
<CustomField>
    <fullName>RUNNING_ROYALTIES_CREDITABLE__c</fullName>
    <description>RUNNING_ROYALTIES_CREDITABLE</description>
    <externalDeveloperName>RUNNING_ROYALTIES_CREDITABLE</externalDeveloperName>
    <label>Running Royalties Creditable</label>
    <length>4</length>
    <type>Text</type>
</CustomField>