force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <description>START_DATE</description>
    <externalDeveloperName>START_DATE</externalDeveloperName>
    <label>Start</label>
    <type>Date</type>
</CustomField>