force-app/main/default/objects/Forrester_SHIR_ROYALTY_TERM_VIEW__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>STATUS</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>Status Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>